Fix to prevent scrollbar from repositioning page elements

--- a/pawfriends/src/App.css
+++ b/pawfriends/src/App.css
@@ -2,6 +2,7 @@
 body {
   background-image: url('./images/profile-bg.png');
   background-repeat: repeat;
+  overflow-y: scroll
 }
 
 .App {
