--- a/pawfriends/src/components/Dropdown/styles.css
+++ b/pawfriends/src/components/Dropdown/styles.css
@@ -1,7 +1,7 @@
 .dropdown {
   position: fixed;
   top: 5px;
-  right: 5px; 
+  right: 15px; 
   width: 40px;
   height: 40px;
   border-radius: 5em;
